--- a/templates/index.html
+++ b/templates/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script type="module" src="{{ url_for('static', filename='nav.js')}}"></script>
     <title>{{title}}</title>
 </head>
 <body>
-    {{content}}
-    <a href="/{{link}}">{{link}}</a>
+    <nav-bar></nav-bar>
 </body>
 </html>
