--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script type="module" src="{{ url_for('static', filename='nav.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='nav.js') }}" defer></script>
+
     <title>{{title}}</title>
 </head>
 <body>
-    <nav-bar></nav-bar>
+    <div id="nav-bar"></div>
 </body>
 </html>
