--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %}</title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
-<nav>
+<nav class="nav">
     {% block nav %}
-    <ul class="nav">
+    <ul>
         {% if current_user.is_active %}
         <li><a href="/home">Home</a></li>
         <li><a href="/logout">Logout</a></li>
