Added edit page

--- a/templates/view/index.html
+++ b/templates/view/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block header %}
-<h1>Index</h1>
+<h1>Home</h1>
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,15 @@
     {% for post in posts %}
     <div class="post">
         <h2 class="post-title">{{post.title}}</h2>
+
+        {% if current_user.id == post.author_id %}
+        <p class="post-body">{{post.body}}
+            <a class="post-edit" href="/edit/{{post.id}}">Edit</a>
+        </p>
+        {% else %}
         <p class="post-body">{{post.body}}</p>
+        {% endif %}
+
         <p class="post-footer">
             {{ User.query.filter_by(id=post.author_id).first().username }}
             {{post.created_date.strftime('%d:%m:%Y')}}
