--- a/templates/view/create.html
+++ b/templates/view/create.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if current_user.is_active %}
-<p>Logged in as {{current_user}}</p>
+<p>Logged in as {{current_user.username}}</p>
 {% else %}
 <p>Not Logged In</p>
 {% endif %}
