--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
         {% if current_user.is_active %}
         <li><a href="/home">Home</a></li>
         <li><a href="/logout">Logout</a></li>
-        <li><a href="/create">Create</a></li>
+        <li><a href="/post/create">Create</a></li>
         {% else %}
         <li><a href="/login">Login</a></li>
         <li><a href="/register">Register</a></li>
