--- a/templates/view/index.html
+++ b/templates/view/index.html
@@ -18,7 +18,7 @@
 
         <p class="post-footer">
             {{ User.query.filter_by(id=post.author_id).first().username }}
-            {{post.created_date.strftime('%d:%m:%Y')}}
+            {{ post.updated_date.strftime("%h %d %H:%M")}}
         </p>
         {% if current_user.id == post.author_id %}
         <a class="post-edit" href="/post/edit/{{post.id}}">Edit Post</a>
