--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %} Register Account {% endblock %}
+
 {% block header %}
 <h1>Register</h1>
 {% endblock %}
