--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<title>{% block title %}{% endblock %}</title>
+<title>{% block title %}{% endblock %} - Wraith Blog App </title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<title>Wraith Blog App</title>
 <nav class="nav">
     {% block nav %}
     <ul>
