--- a/templates/view/index.html
+++ b/templates/view/index.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+{% block title %} Home {% endblock %}
 {% block header %}
 <h1>Home</h1>
 {% endblock %}
+
 
 {% block content %}
 {% if current_user.is_active %}
