--- a/templates/view/index.html
+++ b/templates/view/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 {% if current_user.is_active %}
-<p class="login-display">Logged in as {{current_user.username}}</p>
+<p class="login-display">Logged in as {{ current_user.username.capitalize() }}</p>
 {% else %}
 <p>Not Logged In</p>
 {% endif %}
