--- a/templates/view/create.html
+++ b/templates/view/create.html
@@ -2,7 +2,7 @@
 {% block title %} Create Post {% endblock %}
 
 {% block header %}
-<h1>Index</h1>
+<h1>Create Post</h1>
 {% endblock %}
 
 {% block content %}
