--- a/templates/view/index.html
+++ b/templates/view/index.html
@@ -25,8 +25,16 @@
         {% if current_user.id == post.author_id %}
         <a class="post-edit" href="/post/edit/{{post.id}}">Edit Post</a>
         <a class="post-delete" href="/post/delete/{{post.id}}">Delete Post</a>
+        <a class="post-reply" href="/post/reply/{{post.id}}">Reply To Post</a>
+        {% else %}
+        <a class="post-reply" href="/post/reply/{{post.id}}">Reply To Post</a>
         {% endif %}
     </div>
+    {% for reply in replies %}
+    {% if reply.post_id == post.id %}
+    <div class="reply-body">{{reply.reply}}</div>
+    {% endif %}
+    {% endfor %}
     {% endfor  %}
 </section>
 {% endblock %}
