--- a/components/templates/view/edit.html
+++ b/components/templates/view/edit.html
@@ -22,7 +22,7 @@
 <h3>
     {{ reply.title }} <br />
 </h3>
-<form method="POST" action='/post/reply/edit/{{post.id}}'>
+<form method="POST" action='/post/reply/edit/{{reply.id}}'>
     {{ form.body.label }} <br />
     {{ form.body(size=50) }} <br />
     {{ form.submit }}
