--- a/api/templates/auth/password.html
+++ b/api/templates/auth/password.html
@@ -7,11 +7,11 @@
 
 {% block content %}
 <form class="form-user" method="POST" action="/user/edit/password">
-    {{ form.username.label }} {{ form.username(size=30) }} <br />
+    {{ form.username.label }} {{ form.username(size=30, autocomplete="off") }} <br />
 
-    {{ form.password.label }} {{ form.password(size=30) }} <br />
+    {{ form.password.label }} {{ form.password(size=30, autocomplete="off") }} <br />
 
-    {{ form.password2.label }} {{ form.password2(size=30) }} <br />
+    {{ form.password2.label }} {{ form.password2(size=30, autocomplete="off") }} <br />
 
     {{ form.submit }}
 </form>
