Started adding some sexy styling

--- a/api/templates/view/index.html
+++ b/api/templates/view/index.html
@@ -26,38 +26,39 @@
             {% endif %}
         </p>
         {% if current_user.id == post.author_id %}
-            <a class="post-edit" href="/post/edit/{{post.id}}">Edit Post</a>
-            <a class="post-delete" href="/post/delete/{{post.id}}">Delete Post</a>
-            <a class="post-reply" href="/post/reply/{{post.id}}">Reply To Post</a>
+        <a class="button post-button post-edit" href="/post/edit/{{post.id}}">Edit</a>
+        <a class="button post-button post-delete" href="/post/delete/{{post.id}}">Delete</a>
+        <a class="button post-button post-reply" href="/post/reply/{{post.id}}">Reply</a>
         {% else %}
-            <a class="post-reply" href="/post/reply/{{post.id}}">Reply To Post</a>
+        <a class="button post-button post-reply" href="/post/reply/{{post.id}}">Reply</a>
         {% endif %}
+        <br />
     </div>
 
     {% for reply in replies %}
-        {% if reply.post_id == post.id %}
-            {% if current_user.id == reply.author_id %}
-                <div class="reply-body">
-                    {{reply.reply}}
-                    {% if reply.edited %}
-                    (Edited)
-                    {% endif %}
-                    - 
-                    {{ User.query.filter_by(id=reply.author_id).first().username.capitalize() }}
-                    <a class="reply-edit" href="/post/reply/edit/{{reply.id}}">Edit Reply</a>
-                    <a class="reply-delete" href="/post/reply/delete/{{reply.id}}">Delete Reply</a>
-                </div>
-            {% else %}
-                <div class="reply-body">
-                    {{reply.reply}}
-                    {% if reply.edited %}
-                    (Edited)
-                    {% endif %}
-                    -
-                    {{ User.query.filter_by(id=reply.author_id).first().username.capitalize() }}
-                </div>
-            {% endif %}
+    {% if reply.post_id == post.id %}
+    {% if current_user.id == reply.author_id %}
+    <div class="reply-body">
+        {{reply.reply}}
+        {% if reply.edited %}
+        (Edited)
         {% endif %}
+        -
+        {{ User.query.filter_by(id=reply.author_id).first().username.capitalize() }}
+        <a class="button reply-button reply-edit" href="/post/reply/edit/{{reply.id}}">Edit</a>
+        <a class="button reply-button reply-delete" href="/post/reply/delete/{{reply.id}}">Delete</a>
+    </div>
+    {% else %}
+    <div class="reply-body">
+        {{reply.reply}}
+        {% if reply.edited %}
+        (Edited)
+        {% endif %}
+        -
+        {{ User.query.filter_by(id=reply.author_id).first().username.capitalize() }}
+    </div>
+    {% endif %}
+    {% endif %}
     {% endfor %}
 
     {% endfor  %}
