--- a/api/static/styles.css
+++ b/api/static/styles.css
@@ -1,8 +1,9 @@
 div.post {
     padding: 1vw;
     padding-top: 0.5vw;
-    padding-bottom: 0.3vw;
-    border: 2px solid black;
+    padding-bottom: 0.8vw;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 div.flash-message {
     color: red;
@@ -16,9 +17,52 @@ p.login-display {
 }
 
 div.reply-body {
+    border: 1px dotted gray;
     text-indent: 16px;
+    margin-bottom: 5px;
+}
+
+nav.nav-bar {
+    background-color: red;
+    border: 1px solid black;
+    border-radius: 50px;
+    padding: 15px;
 }
 
 ul.nav {
+    display: flex;
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+li.nav-item {
+    background-color: lightpink;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a.button {
+    background-color: lightblue;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-size: small;
+    padding: 1vh;
+    padding-top: 0.3vh;
+    padding-bottom: 0.3vh;
+}
+
+a.reply-button {
+    background-color: lightgreen;
+    border: 0px;
+    font-size: x-small;
+    padding: 3px;
+    border-radius: 0;
 }
