--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <title>{% block title %}{% endblock %} - Wraith Blog App </title>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<link rel="icon" href="{{ url_for('static', filename='icon.ico') }}">
 <title>Wraith Blog App</title>
-<nav>
+<nav class="nav-bar">
     {% block nav %}
     <ul class="nav">
         {% if current_user.is_active %}
-        <li><a href="/home">Home</a></li>
-        <li><a href="/logout">Logout</a></li>
-        <li><a href="/post/create">Create</a></li>
+        <li class="nav-item">
+            <a class="nav-a" href="/home">Home</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-a" href="/logout">Logout</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-a" href="/post/create">Create</a>
+        </li>
         {% else %}
-        <li><a href="/login">Login</a></li>
-        <li><a href="/register">Register</a></li>
+        <li class="nav-item">
+            <a class="nav-a" href="/login">Login</a>
+        </li>
+
+        <li class="nav-item">
+            <a class="nav-a" href="/register">Register</a>
+        </li>
         {% endif %}
     </ul>
     {% endblock  %}
