--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -16,7 +16,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-a" href="/post/create">Create</a>
+            <a class="nav-a" href="/profile/{{current_user.username}}">Profile</a>
         </li>
         {% else %}
         <li class="nav-item">
